--- a/views/terms.pug
+++ b/views/terms.pug
@@ -7,7 +7,7 @@ block styles
         }
 
 block content
-  main
+  main.section-white
     section.ml-5.mr-5
       .row.text-center(style="margin:15px;")
         .col-sm-4
