--- a/views/birthdays.pug
+++ b/views/birthdays.pug
@@ -2,7 +2,9 @@ extends layout
 
 block content
     section.section-white
-        h1 Szülinapok
+        h1.fw-bold
+            <i class="fas fa-birthday-cake me-2"></i>
+            | Szülinapok
         hr
 
         if birthdays.length != 0
