--- a/views/event_edit.pug
+++ b/views/event_edit.pug
@@ -2,7 +2,10 @@ extends layout
 
 block content 
     main.section-white
-        h1.ms-3.mt-3.fw-bold Esemény szerkesztése
+        h1.ms-3.mt-3.fw-bold
+            <i class="fas fa-calendar-edit"></i>
+            | Esemény szerkesztése
+        hr
 
         div(class="container-fluid")
             .row
