--- a/views/friends.pug
+++ b/views/friends.pug
@@ -2,7 +2,9 @@ extends layout
 
 block content
     section.section-white
-        h1 Barátok
+        h1.fw-bold
+            i.fas.fa-users.me-2
+            | Barátok
         hr
 
         if friends 
