--- a/views/my_events.pug
+++ b/views/my_events.pug
@@ -2,21 +2,15 @@ extends layout
 
 block content
     main.section-white
-        h1 Eseményeim
+        h1.fw-bold
+            i.fas.fa-calendar.me-2
+            | Eseményeim
         hr
 
         if events
             .text-center
                 for event in events
-                    a(href=makeEventUrl(event)).row.event-row
-                        .col-sm
-                            p.fw-bold= event.name
-                        .col-sm
-                            p= stripEventName(event.text)
-                        .col-sm
-                            p.text-muted= event.place
-                        .col-sm
-                            p.text-muted= formatDate(event.date)
+                    include part_event
         else  
             p(style="font-style: italic;").text-muted Még nincs saját eseményed!
 
