--- a/views/settings.pug
+++ b/views/settings.pug
@@ -5,7 +5,10 @@ block scripts
 
 block content 
     section.section-white
-        h1.ms-3.mt-3.fw-bold Beállítások
+        h1.ms-3.mt-3.fw-bold
+            i.fas.fa-cog.me-2
+            | Beállítások
+        hr
 
         div(class="container-fluid")
             .row
