--- a/views/event_create.pug
+++ b/views/event_create.pug
@@ -2,7 +2,10 @@ extends layout
 
 block content
     main.section-white
-        h1.ms-3.mt-3.fw-bold Esemény meghirdetése
+        h1.ms-3.mt-3.fw-bold
+            <i class="fas fa-calendar-plus me-2"></i>
+            | Esemény meghirdetése
+        hr
 
         div(class="container-fluid")
             .row
