--- a/views/layout.pug
+++ b/views/layout.pug
@@ -63,7 +63,7 @@ html(lang='hu')
         -  return desc.substring(0, 15) + "...";  
         - }
 
-        nav.navbar.navbar-expand-lg.bg-dark.navbar-dark
+        nav.navbar.navbar-expand-lg.bg-dark.navbar-default
             .container-fluid
                 a.ms-4.navbar-brand.nav-link(href='/', title='Celebrate Together', alt='Celebrate Together')
                     img(title='Celebrate Together', alt='Celebrate Together', src='/images/logo_attetszo.png')
@@ -73,13 +73,25 @@ html(lang='hu')
                     span.navbar-toggler-icon
                     
             #navbarSupportedContent.collapse.navbar-collapse
-                ul.navbar-nav.me-auto.mb-2.mb-lg-0
+                ul.navbar-nav.me-3.mb-2.mb-lg-0
 
                     if user
-                        li.nav-item.dropdown.me-2
+                        li.nav-item.dropdown
                             a.nav-link.dropdown-toggle(href='#' role='button' data-bs-toggle='dropdown' aria-expanded='false')
-                                i.far.fa-compass.me-1
-                                | Menü
+                                i.fas.fa-bell
+                                #notification-badge.badge.badge-light
+
+                            ul#notification-list.dropdown-menu
+                                //li
+                                    p.dropdown-item
+
+                        li.nav-item(title="Kezdőlap")
+                            a.nav-link(href='/')
+                                i.fas.fa-home.me-2
+
+                        li.nav-item.dropdown
+                            a.nav-link.dropdown-toggle(href='#' role='button' data-bs-toggle='dropdown' aria-expanded='false')
+                                i.fas.fa-bars.me-2(title="Menü")
 
                             ul.dropdown-menu
                                 li
@@ -90,6 +102,12 @@ html(lang='hu')
                                     a.dropdown-item(href='/user/settings')
                                         i.fas.fa-cogs.me-1
                                         | Beállítások
+                                li
+                                    hr.dropdown-divider
+                                li
+                                    a.dropdown-item(href='/user/messages')
+                                        i.fas.fa-comments.me-1
+                                        | Üzenetek
                                 li
                                     a.dropdown-item(href='/event')
                                         i.fas.fa-calendar.me-1
@@ -104,45 +122,36 @@ html(lang='hu')
                                     a.dropdown-item(href='/logout')
                                         i.fas.fa-sign-out-alt.me-1
                                         | Kijelentkezés
-
-                        li.nav-item.dropdown.me-2
-                            a.nav-link.dropdown-toggle(href='#' role='button' data-bs-toggle='dropdown' aria-expanded='false')
-                                i.far.fa-bell
-                                #notification-badge.badge.badge-light
-
-                            ul#notification-list.dropdown-menu
-                                //li
-                                    p.dropdown-item
-
-                        li.nav-item
-                            a.nav-link(href='/')
-                                | Kezdőlap
                         
-                        li.nav-item
+                        li.nav-item(title="Események")
                             a.nav-link(href='/events')
-                                | Események
+                                i.fas.fa-calendar.me-2
+                                // span Események
 
-                        li.nav-item
+                        li.nav-item(title="Szülinapok")
                             a.nav-link(href='/birthdays')
-                                | Szülinapok
+                                i.fas.fa-birthday-cake.me-2
+                                // span Szülinapok
 
-                        li.nav-item
+                        li.nav-item(title="Barátok")
                             a.nav-link(href='/user/friends')
-                                | Barátok
+                                i.fas.fa-users.me-2
+                                //span Barátok
 
-                        li.nav-item
+                        li.nav-item(title="Keresés")
                             a.nav-link(href='/search')
-                                i.fas.fa-search
+                                i.fas.fa-search.me-2
 
                     else
                         li.nav-item
-                            
                             a.nav-link(href='/login')
-                                | Bejelentkezés
+                                //i.fas.fa-user-circle.me-2
+                                span Bejelentkezés
                                 
                         li.nav-item.me-4
                             a.nav-link(href='/register')
-                                | Regisztráció
+                                //i.fas.fa-sign-in-alt.me-2
+                                span Regisztráció
 
                 //if user
                     form.d-flex(role='search', method="POST", action="/search/user").me-4
@@ -152,7 +161,9 @@ html(lang='hu')
 
         if messages
             for message in messages
-                .alert.alert-warning= message
+                .alert.alert-warning.text-center.fw-bold
+                    i.fas.fa-info-circle.me-2
+                    span= message
 
         block content
         
