--- a/views/register.pug
+++ b/views/register.pug
@@ -1,11 +1,14 @@
 extend layout
 
+block scripts 
+    script(src="/js/avatar.js?v=1", type="text/javascript")
+
 block content
     section.h-100
         .container.py-5.h-100
             .row.d-flex.justify-content-center.align-items-center.h-100
                 .col-xl-10
-                    .card.rounded-3.text-black
+                    .card.rounded-3.text-black(style="background-color: white; margin-top: 0px;")
                         .row.g-0
                             .col-lg-6
                                 .card-body.p-md-5.mx-md-4
@@ -14,6 +17,10 @@ block content
                                         h2.mb-5
                                             b Regisztrálj!
                                     form(action="/register", method="POST").form-outline.mb-4.pt-1.mb-5.pb-1
+                                        
+                                        include part_avatar_choice
+                                        br
+
                                         input(type="text", name="name", placeholder="Teljes név", required="ture").form-control.rounded.mb-1
                                         input(type="email", name="email", placeholder="Email", required="ture").form-control.rounded.mb-1
                                         input(type="password", name="password", placeholder="Jelszó", required="ture").form-control.rounded.mb-1
@@ -24,3 +31,5 @@ block content
                                         // <a class="text-muted" href="#!">Forgot password?</a>
                             .col-lg-6.d-flex.align-items-center
                                 img.loginpic(src='images/kep.png')
+
+    div(style="margin-bottom:500px;")
