--- a/views/event_edit.pug
+++ b/views/event_edit.pug
@@ -3,7 +3,7 @@ extends layout
 block content 
     main.section-white
         h1.ms-3.mt-3.fw-bold
-            <i class="fas fa-calendar-edit"></i>
+            i.fas.fa-calendar.me-2
             | Esemény szerkesztése
         hr
 
