--- a/views/layout.pug
+++ b/views/layout.pug
@@ -123,6 +123,10 @@ html(lang='hu')
                                         i.fas.fa-sign-out-alt.me-1
                                         | Kijelentkezés
                         
+                        li.nav-item(title="Üzenetek")
+                            a.nav-link(href='/messages')
+                                i.fas.fa-envelope.me-2
+
                         li.nav-item(title="Események")
                             a.nav-link(href='/events')
                                 i.fas.fa-calendar.me-2
