--- a/views/settings.pug
+++ b/views/settings.pug
@@ -2,6 +2,8 @@ extends layout
 
 block scripts 
     script(src="/js/settings.js?v=1", type="text/javascript")
+    script(src="/js/avatar.js?v=1", type="text/javascript")
+
 
 block content 
     section.section-white
@@ -12,22 +14,32 @@ block content
 
         div(class="container-fluid")
             .row
-                form(action="/user/settings", method="POST", class="col-4")
-                    label(for="name") Név:
+                form(action="/user/settings", method="POST").col-4
+
+                    - var profile = "/images/profiles/" + user.profile;
+                    include part_avatar_choice
+
+                    label(for="name")
+                        | Név
+                        span.text-danger.ms-1 *
                     input(type="text", name="name", placeholder="Név", required="ture", value=user.name).form-control
                     //label(for="email").mt-3 Email cím:
                     //input(type="email", name="email", placeholder="Email", required="ture", value=user.email).form-control
-                    label(for="birth_day").mt-3 Születésnap 
+                    label(for="birth_day").mt-3
+                        | Születésnap 
+                        span.text-danger.ms-1 *
                     input(type="date", name="birth_day", placeholder="Születésnap", required="ture", value=getBirthDay(user)).form-control
                     label(for="phone").mt-3 Telefonszám
-                    input(type="phone", name="phone", placeholder="Telefonszám mint 06 00 000 0000", value=user.phone).form-control
+                    input(type="phone", name="phone", placeholder="Telefonszám", value=user.phone).form-control
                     label(for="birth_place").mt-3 Születési hely
                     input(type="text", name="birth_place", placeholder="Születési hely", value=user.birth_place).form-control
                     label(for="residence").mt-3 Lakhely
                     input(type="text", name="residence", placeholder="Lakhely", value=user.residence).form-control
 
                     hr
-                    label(for="password") Jelszó a mentéshez:
+                    label(for="password")
+                        | Jelszó a mentéshez
+                        span.text-danger.ms-1 *
                     input(type="password", name="password", placeholder="Az Ön jelszava", required="ture", value="").form-control
                     br
                     input(type="submit", name="submit" value="Módosítások mentése").btn.btn-success
