--- a/views/friends.pug
+++ b/views/friends.pug
@@ -9,8 +9,11 @@ block content
 
         if friends 
             for friend in friends 
+                img(src='/images/profiles/' + friend.profile, alt='logo').pb-4.me-2.avatarkep
                 a(href=makeUserUrl(friend))= friend.name
                 br
 
         else 
             p(style="font-style: italic;").text-muted A barátaid litáját itt találod majd, miután visszajelöl egy pár ember! ;)
+
+    div(style="margin-bottom:500px;")
