--- a/views/part_post.pug
+++ b/views/part_post.pug
@@ -3,7 +3,7 @@
         .row 
             .col-sm-10
                 a(href="/user/" + post.user_id + "/s")
-                    img(src='images/profiles/' + post.user_profile, alt='logo').avatarkep
+                    img(src='/images/profiles/' + post.user_profile, alt='logo').avatarkep
                     p.fw-bold.inlineblock.ps-1= post.name
     
             .col-sm-2
