--- a/views/user.pug
+++ b/views/user.pug
@@ -31,5 +31,6 @@ block content
         hr
         br
 
-        p Mi kell ide?
-        
+        for post in posts
+            include part_post
+
